--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -192,4 +192,10 @@
         <item name="android:gravity">center</item>
     </style>
 
+    <!-- ProgressBar 样式 -->
+    <style name="loading_progress" parent="@android:style/Widget.ProgressBar.Large">
+        <item name="android:indeterminateDrawable">@drawable/progress_loading_rote</item>
+    </style>
+
+
 </resources>
