--- a/app/src/main/res/layout/layout_progress.xml
+++ b/app/src/main/res/layout/layout_progress.xml
@@ -1,18 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <com.benyuan.xiaojs.ui.widget.progress.ProgressLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
-        android:id="@+id/background"
+        android:id="@+id/load_background"
         android:layout_width="@dimen/px120"
         android:layout_height="@dimen/px120"
         android:padding="16dp"
         android:gravity="center"
         android:orientation="vertical">
 
-    <ProgressBar
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            style="@style/loading_progress"
-            android:indeterminateDuration="1000"
-            />
+    <!--<ProgressBar-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--style="@style/loading_progress"-->
+        <!--android:indeterminateDuration="1000"-->
+        <!--/>-->
 
 </com.benyuan.xiaojs.ui.widget.progress.ProgressLayout>
