--- a/app/src/main/res/layout/fragment_mine.xml
+++ b/app/src/main/res/layout/fragment_mine.xml
@@ -26,7 +26,7 @@
                     android:id="@+id/profile_cover"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:background="@drawable/profile_bg"/>
+                    android:background="@color/blur_float_up_bg"/>
 
             <LinearLayout
                     android:orientation="vertical"
