替换pulltorefreshlist的库，增加左滑删除模版，调整AbsSwipeAdapter的封装逻辑。 修改bug: 108 #1-首页，消息列表中，向左滑动无法删除信息

--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -3,7 +3,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
-    <com.handmark.pulltorefresh.AutoPullToRefreshListView
+    <com.benyuan.xiaojs.common.pulltorefresh.core.PullToRefreshSwipeListView
             android:id="@+id/home_list"
             android:paddingBottom="@dimen/px100"
             android:scrollbars="none"
