--- a/app/src/main/res/layout/activity_base_list.xml
+++ b/app/src/main/res/layout/activity_base_list.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<com.handmark.pulltorefresh.AutoPullToRefreshListView
+<com.benyuan.xiaojs.common.pulltorefresh.core.PullToRefreshSwipeListView
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/base_list"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:scrollbars="none"
         android:divider="@android:color/transparent"
+        android:listSelector="@android:color/transparent"
         android:dividerHeight="@dimen/px20"
         android:orientation="vertical"/>
