--- a/app/src/main/res/layout/activity_my_course_search.xml
+++ b/app/src/main/res/layout/activity_my_course_search.xml
@@ -56,7 +56,7 @@
             style="@style/DividerHorizontal2"/>
 
 
-    <com.handmark.pulltorefresh.AutoPullToRefreshListView
+    <com.benyuan.xiaojs.common.pulltorefresh.core.PullToRefreshSwipeListView
             android:id="@+id/my_course_search_list"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
