--- a/app/src/main/res/layout/fragment_message.xml
+++ b/app/src/main/res/layout/fragment_message.xml
@@ -53,7 +53,7 @@
 
     <View style="@style/DividerHorizontal"/>
 
-    <com.handmark.pulltorefresh.AutoPullToRefreshListView
+    <com.benyuan.xiaojs.common.pulltorefresh.core.PullToRefreshSwipeListView
 
             android:id="@+id/listview"
             android:orientation="vertical"
@@ -64,5 +64,5 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
-    </com.handmark.pulltorefresh.AutoPullToRefreshListView>
+    </com.benyuan.xiaojs.common.pulltorefresh.core.PullToRefreshSwipeListView>
 </LinearLayout>
