--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,6 +5,11 @@
     <dimen name="ability_item_width">80dp</dimen>
     <dimen name="ability_item_height">50dp</dimen>
     <dimen name="ability_item_margin">2dp</dimen>
+    <dimen name="indicator_right_padding">10dp</dimen>
+    <dimen name="indicator_corner_radius">12dp</dimen>
+    <dimen name="indicator_internal_padding">4dp</dimen>
+    <dimen name="header_footer_left_right_padding">24dp</dimen>
+    <dimen name="header_footer_top_bottom_padding">12dp</dimen>
 
     <dimen name="px1">0.5dp</dimen>
     <dimen name="px2">1.0dp</dimen>
