--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -194,4 +194,7 @@
         <attr name="ptrDrawableTop" format="reference" />
         <attr name="ptrDrawableBottom" format="reference" />
     </declare-styleable>
+    <declare-styleable name="load_attr">
+        <attr name="lsize" format="dimension"/>
+    </declare-styleable>
 </resources>
