教室框架ver3_布局修改

--- a/app/src/main/res/layout/layout_classroom_panel.xml
+++ b/app/src/main/res/layout/layout_classroom_panel.xml
@@ -278,13 +278,14 @@
 
     </LinearLayout>
 
-    <ListView
+    <FrameLayout
             android:id="@+id/stu_video"
-            android:layout_width="@dimen/px160"
-            android:layout_height="@dimen/px370"
-            android:background="#f00"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
             android:layout_above="@+id/right_panel"
-            android:layout_marginBottom="@dimen/px10"></ListView>
+            android:layout_marginBottom="@dimen/px10">
+
+    </FrameLayout>
 </com.benyuan.xiaojs.ui.classroom.MainPanel>
 
