--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -23,6 +23,7 @@
     <color name="red_bg">#ff4d30</color>
     <color name="classroom_main_gray">#f04e4e4e</color>
     <color name="classroom_light_gray">#999999</color>
+    <color name="classroom_chat_bg">#bb999999</color>
     <!--disable color, eg btn-->
     <color name="disable_btn">#999999</color>
     <!--horizontal divide line-->
