--- a/app/src/main/res/layout/layout_classroom_contact_item.xml
+++ b/app/src/main/res/layout/layout_classroom_contact_item.xml
@@ -1,7 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+              xmlns:roundimg="http://schemas.android.com/apk/res-auto"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
+              android:paddingTop="@dimen/px16"
+              android:paddingBottom="@dimen/px16"
+              android:paddingLeft="@dimen/px20"
               android:gravity="center_vertical">
 
     <ImageView
@@ -12,10 +16,16 @@
     <com.benyuan.xiaojs.ui.widget.RoundedImageView
             android:id="@+id/portrait"
             android:layout_width="@dimen/px80"
-            android:layout_height="@dimen/px80"/>
+            android:layout_height="@dimen/px80"
+            roundimg:oval="true"
+            roundimg:border_color="@color/white"
+            roundimg:border_width="@dimen/px2"/>
 
     <LinearLayout
-            android:layout_width="@dimen/px200"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_marginLeft="@dimen/px10"
+            android:layout_marginRight="@dimen/px10"
             android:layout_height="wrap_content"
             android:gravity="center_vertical"
             android:orientation="vertical">
