--- a/app/src/main/res/layout/layout_classroom_panel.xml
+++ b/app/src/main/res/layout/layout_classroom_panel.xml
@@ -3,7 +3,44 @@
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/white">
+        android:background="@android:color/transparent">
+
+    <com.benyuan.xiaojs.ui.classroom.live.LiveView
+            android:id="@+id/teacher_video"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/px10"
+            android:layout_marginLeft="@dimen/px10"/>
+
+    <LinearLayout
+            android:id="@+id/right_panel"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentRight="true"
+            android:orientation="horizontal"
+            android:layout_marginRight="@dimen/px10"
+            android:layout_marginBottom="@dimen/px10">
+
+        <ImageView
+                android:id="@+id/msg_btn"
+                android:layout_width="@dimen/px60"
+                android:layout_height="@dimen/px60"
+                android:layout_centerInParent="true"
+                android:layout_alignParentRight="true"
+                android:src="@drawable/cr_msg"/>
+
+    </LinearLayout>
+
+    <com.benyuan.xiaojs.ui.classroom.live.view.MediaContainerView
+            android:id="@+id/player_container"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_alignParentRight="true"
+            android:layout_marginRight="@dimen/px10"
+            android:layout_marginTop="@dimen/px120"
+            android:layout_above="@+id/right_panel"
+            android:layout_marginBottom="@dimen/px10"/>
 
     <LinearLayout
             android:id="@+id/top_panel"
@@ -156,13 +193,6 @@
 
     </LinearLayout>
 
-    <com.benyuan.xiaojs.ui.classroom.live.LiveView
-            android:id="@+id/teacher_video"
-            android:layout_width="@dimen/px160"
-            android:layout_height="@dimen/px90"
-            android:layout_below="@+id/top_panel"
-            android:background="#f00"/>
-
     <LinearLayout
             android:id="@+id/left_panel"
             android:layout_width="wrap_content"
@@ -258,34 +288,5 @@
 
     </LinearLayout>
 
-    <LinearLayout
-            android:id="@+id/right_panel"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentRight="true"
-            android:orientation="horizontal"
-            android:layout_marginRight="@dimen/px10"
-            android:layout_marginBottom="@dimen/px10">
-
-        <ImageView
-                android:id="@+id/msg_btn"
-                android:layout_width="@dimen/px60"
-                android:layout_height="@dimen/px60"
-                android:layout_centerInParent="true"
-                android:layout_alignParentRight="true"
-                android:src="@drawable/cr_msg"/>
-
-    </LinearLayout>
-
-    <FrameLayout
-            android:id="@+id/stu_video"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
-            android:layout_above="@+id/right_panel"
-            android:layout_marginBottom="@dimen/px10">
-
-    </FrameLayout>
 </com.benyuan.xiaojs.ui.classroom.MainPanel>
 
