--- a/app/src/main/res/layout/layout_classroom_panel.xml
+++ b/app/src/main/res/layout/layout_classroom_panel.xml
@@ -5,7 +5,7 @@
         android:layout_height="match_parent"
         android:background="@color/white">
 
-    <LinearLayout
+    <RelativeLayout
             android:id="@+id/top_panel"
             android:layout_alignParentTop="true"
             android:layout_width="match_parent"
@@ -13,6 +13,7 @@
             android:orientation="vertical">
 
         <RelativeLayout
+                android:id="@+id/title_bar"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:paddingTop="@dimen/px16"
@@ -109,6 +110,14 @@
 
         </RelativeLayout>
 
+        <com.benyuan.xiaojs.ui.classroom.live.LiveView
+                android:id="@+id/teacher_video"
+                android:layout_width="@dimen/px160"
+                android:layout_height="@dimen/px90"
+                android:layout_marginTop="@dimen/px20"
+                android:layout_below="@+id/title_bar"
+                android:background="#f00"/>
+
         <LinearLayout
                 android:id="@+id/live_progress_layout"
                 android:layout_width="wrap_content"
@@ -117,6 +126,8 @@
                 android:layout_marginTop="@dimen/px20"
                 android:layout_gravity="center_horizontal"
                 android:gravity="center_vertical"
+                android:layout_below="@+id/title_bar"
+                android:layout_centerHorizontal="true"
                 android:background="@drawable/live_progress_bg">
 
             <TextView
@@ -153,15 +164,7 @@
                     android:paddingBottom="@dimen/px20"
                     android:layout_height="wrap_content"/>
         </LinearLayout>
-
-    </LinearLayout>
-
-    <com.benyuan.xiaojs.ui.classroom.live.LiveView
-            android:id="@+id/teacher_video"
-            android:layout_width="@dimen/px160"
-            android:layout_height="@dimen/px90"
-            android:layout_below="@+id/top_panel"
-            android:background="#f00"/>
+    </RelativeLayout>
 
     <LinearLayout
             android:id="@+id/left_panel"
@@ -257,6 +260,73 @@
                 android:layout_marginLeft="@dimen/px10"/>
 
     </LinearLayout>
+
+    <LinearLayout
+            android:id="@+id/white_board_panel"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true"
+            android:layout_marginBottom="@dimen/px10"
+            android:visibility="gone"
+            android:background="@color/classroom_main_gray"
+            android:orientation="horizontal">
+
+        <ImageView
+                android:id="@+id/select_btn"
+                android:layout_width="@dimen/px60"
+                android:layout_height="@dimen/px60"
+                android:layout_centerInParent="true"
+                android:layout_alignParentRight="true"
+                android:src="@drawable/cr_qa"/>
+
+        <ImageView
+                android:id="@+id/paint_btn"
+                android:layout_width="@dimen/px60"
+                android:layout_height="@dimen/px60"
+                android:layout_centerInParent="true"
+                android:layout_alignParentRight="true"
+                android:src="@drawable/cr_qa"
+                android:layout_marginLeft="@dimen/px10"/>
+
+        <ImageView
+                android:id="@+id/shape_btn"
+                android:layout_width="@dimen/px60"
+                android:layout_height="@dimen/px60"
+                android:layout_centerInParent="true"
+                android:layout_alignParentRight="true"
+                android:src="@drawable/cr_qa"
+                android:layout_marginLeft="@dimen/px10"/>
+
+        <ImageView
+                android:id="@+id/eraser_btn"
+                android:layout_width="@dimen/px60"
+                android:layout_height="@dimen/px60"
+                android:layout_centerInParent="true"
+                android:layout_alignParentRight="true"
+                android:src="@drawable/cr_qa"
+                android:layout_marginLeft="@dimen/px10"/>
+
+        <ImageView
+                android:id="@+id/text_btn"
+                android:layout_width="@dimen/px60"
+                android:layout_height="@dimen/px60"
+                android:layout_centerInParent="true"
+                android:layout_alignParentRight="true"
+                android:src="@drawable/cr_qa"
+                android:layout_marginLeft="@dimen/px10"/>
+
+        <ImageView
+                android:id="@+id/color_picker_btn"
+                android:layout_width="@dimen/px60"
+                android:layout_height="@dimen/px60"
+                android:layout_centerInParent="true"
+                android:layout_alignParentRight="true"
+                android:src="@drawable/cr_qa"
+                android:layout_marginLeft="@dimen/px10"/>
+
+    </LinearLayout>
+
 
     <LinearLayout
             android:id="@+id/right_panel"
