--- a/app/src/main/res/layout/layout_classroom_contact_msg.xml
+++ b/app/src/main/res/layout/layout_classroom_contact_msg.xml
@@ -2,7 +2,8 @@
 <FrameLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="wrap_content"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:clickable="true">
 
     <RelativeLayout
             android:id="@+id/contact"
