--- a/app/src/main/res/layout/layout_classroom_course_ware.xml
+++ b/app/src/main/res/layout/layout_classroom_course_ware.xml
@@ -3,7 +3,8 @@
               android:layout_width="wrap_content"
               android:layout_height="match_parent"
               android:orientation="vertical"
-              android:background="@color/classroom_main_gray">
+              android:background="@color/classroom_main_gray"
+              android:clickable="true">
 
     <TextView
             android:layout_width="wrap_content"
