--- a/app/src/main/res/layout/layout_classroom_msg.xml
+++ b/app/src/main/res/layout/layout_classroom_msg.xml
@@ -4,7 +4,8 @@
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:background="@color/white"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:clickable="true">
 
     <TextView
             android:layout_width="match_parent"
