直播课审核失败原因_布局占位，后台暂未返回数据

--- a/app/src/main/res/layout/activity_live_lesson_detail.xml
+++ b/app/src/main/res/layout/activity_live_lesson_detail.xml
@@ -141,6 +141,8 @@
                     android:layout_height="wrap_content"
                     android:textColor="@color/white"
                     android:textSize="@dimen/font_26px"
+                    android:paddingLeft="@dimen/px5"
+                    android:paddingRight="@dimen/px5"
                     android:layout_marginLeft="@dimen/px16"/>
         </LinearLayout>
 
