--- a/app/src/main/res/layout/layout_clazz_room_live.xml
+++ b/app/src/main/res/layout/layout_clazz_room_live.xml
@@ -8,6 +8,6 @@
             android:visibility="visible"
             android:layout_alignParentLeft="true"
             android:layout_alignParentTop="true"
-            android:layout_width="@dimen/px208"
-            android:layout_height="@dimen/px117"/>
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
 </RelativeLayout>
