--- a/app/src/main/res/layout/activity_live_scale.xml
+++ b/app/src/main/res/layout/activity_live_scale.xml
@@ -1,7 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:orientation="vertical"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent">
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+             android:layout_width="match_parent"
+             android:layout_height="match_parent">
 
-</LinearLayout>
+    <com.benyuan.xiaojs.ui.classroom.live.view.LiveRecordView
+            android:id="@+id/recorder"
+            android:visibility="gone"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"/>
+
+    <com.benyuan.xiaojs.ui.classroom.live.view.PlayerTextureView
+            android:id="@+id/player"
+            android:visibility="gone"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"/>
+</FrameLayout>
