--- a/app/src/main/res/layout/layout_media_base_view.xml
+++ b/app/src/main/res/layout/layout_media_base_view.xml
@@ -1,60 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-             android:layout_width="match_parent"
-             android:layout_height="match_parent">
+             android:layout_width="@dimen/px180"
+             android:layout_height="@dimen/px135">
 
     <FrameLayout
             android:id="@+id/media_container"
             android:layout_width="match_parent"
             android:layout_height="match_parent"/>
-
-    <TextView
-            android:id="@+id/close"
-            android:text="关闭"
-            android:visibility="invisible"
-            android:layout_gravity="right"
-            android:textSize="10sp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
-
-    <LinearLayout
-            android:visibility="invisible"
-            android:id="@+id/function_bar"
-            android:orientation="horizontal"
-            android:layout_width="match_parent"
-            android:paddingBottom="5dp"
-            android:background="#55000000"
-            android:paddingTop="5dp"
-            android:layout_gravity="bottom"
-            android:layout_height="wrap_content">
-
-        <TextView
-                android:id="@+id/mute"
-                android:text="静音"
-                android:gravity="center"
-                android:layout_width="0dp"
-                android:textSize="10sp"
-                android:layout_weight="1"
-                android:layout_height="wrap_content"/>
-
-        <TextView
-                android:id="@+id/share"
-                android:text="分享"
-                android:textSize="10sp"
-                android:gravity="center"
-                android:layout_width="0dp"
-                android:layout_weight="1"
-                android:layout_height="wrap_content"/>
-
-        <TextView
-                android:id="@+id/scale"
-                android:text="放大"
-                android:gravity="center"
-                android:textSize="10sp"
-                android:layout_width="0dp"
-                android:layout_weight="1"
-                android:layout_height="wrap_content"/>
-    </LinearLayout>
 
     <FrameLayout
             android:id="@+id/loading_view"
