优化教室视频显示

--- a/app/src/main/res/layout/activity_classroom.xml
+++ b/app/src/main/res/layout/activity_classroom.xml
@@ -12,6 +12,7 @@
         <!--白板-->
         <com.benyuan.xiaojs.ui.classroom.whiteboard.WhiteBoard
                 android:id="@+id/white_board"
+                android:background="#ffffff"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"/>
 
