--- a/app/src/main/res/layout/layout_live_preview.xml
+++ b/app/src/main/res/layout/layout_live_preview.xml
@@ -4,14 +4,7 @@
              android:layout_height="match_parent">
 
     <com.benyuan.xiaojs.ui.classroom.live.view.LiveRecordView
-            android:id="@+id/recorder"
-            android:visibility="visible"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"/>
-
-    <com.benyuan.xiaojs.ui.classroom.live.view.PlayerTextureView
-            android:id="@+id/player"
-            android:visibility="gone"
+            android:id="@+id/live_preview_recorder"
             android:layout_width="match_parent"
             android:layout_height="match_parent"/>
 </FrameLayout>
