--- a/app/src/main/res/layout/layout_media_base_view.xml
+++ b/app/src/main/res/layout/layout_media_base_view.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-             android:layout_width="@dimen/px180"
-             android:layout_height="@dimen/px135">
+             android:layout_width="match_parent"
+             android:layout_height="match_parent">
 
     <FrameLayout
             android:id="@+id/media_container"
